--- a/build.gradle
+++ b/build.gradle
@@ -57,3 +57,9 @@ tasks.withType(Test) {
         }
     }
 }
+
+task selenide_android_test(type: Test) {
+    useJUnitPlatform {
+        includeTags 'selenide'
+    }
+}
